# InjectApp

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/emm/injectapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  elf_hooker.cpp  main.cpp  native-lib.cpp
app/src/main/java/com/example/emm/injectapp/: HttpClientTest.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/emm/injectapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
